fixing overflow

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -14,7 +14,7 @@ html {
     font-size: 62.5%;
 }
 
-body, html { 
+body, html, main, section { 
 	overflow-x: hidden;
 }
 
